demo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: from-code-to-cloud-svc
  namespace: from-code-to-cloud
spec:
  selector:
    app: from-code-to-cloud
  ports:
  - name: from-code-to-cloud
    port: 80
    protocol: TCP
    targetPort: 80
